Day1(0116) progress update

--- a/config/content.htm
+++ b/config/content.htm
@@ -1,2 +1,32 @@
 <h1>W1</h1>
-<p></p>
+<h2>Day1(0116)</h2>
+<h3>Python源起</h3>
+<p>Python是一種程式語言，起源於1990年代初期由Guido van Rossum所研發，最初的想法為傳承ABC程式語言，Guido認為ABC相當優美與強大，非專業的程式設計人員也能夠使用，而ABC程式語言當初因為非開放而導致沒有獲得廣泛的運用，於是他決定以開放策略研發Python。</p>
+<p><img alt="" height="244" src="/images/icon-python-text-color-horz.png" width="580"/></p>
+<p><span>🔼</span>Python 英文原意為蟒蛇，也可發現LOGO由兩隻蟒蛇組成。</p>
+<h3>基本Python程式</h3>
+<p><span>🔽</span>利用下載好的Python IDLE編輯及儲存程式，可存為Python的專用.py檔。</p>
+<p><img alt="" height="596" src="/images/IDLE.png" width="579"/></p>
+<p>1.Hello World!!</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">print("Hello World!!")</pre>
+<p>2.基礎四則運算</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">print(5-3+2)
+print(5*3/5)</pre>
+<h3>Python程式碼格式重點</h3>
+<p>1.不能使用class作為定義變數或函式，因為它是用來定義類別的關鍵字。</p>
+<p>2.函式名稱後需加小括號()、字串則使用雙引號"、註解則用井字號#、多行註解則為'''。</p>
+<p>3.Python會將英文大小寫視為不同的識別字，所以編寫時需注意大小寫。</p>
+<p>4.每行最大長度為79個字元，若需要分行則用行接續符號\。</p>
+<p>5.程式每層縮排為4個空白鍵或1個Tab鍵，較推薦使用Tab鍵可一步到位。</p>
+<h3>常見程式設計錯誤(bug)</h3>
+<p>1.語法錯誤</p>
+<p>執行後會出現[SyntaxError: unexpected indent][SyntaxError: EOL while scanning string literal]錯誤</p>
+<p>2.執行期間錯誤</p>
+<p>例如以下程式</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">X=1
+Y=0
+print(X/Y)</pre>
+<p>則是因為分母不能為零而發生[ZeroDivisionError: division by zero]錯誤</p>
+<p>3.邏輯錯誤</p>
+<h1>資料參考</h1>
+<p>https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web </p>
