--- a/content/常見程式設計錯誤(bug).html
+++ b/content/常見程式設計錯誤(bug).html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
+                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Python程式碼格式重點 << <a href='Python程式碼格式重點.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>常見程式設計錯誤(bug)</h1>
+    <div id="tipue_search_content">Python程式碼格式重點 << <a href='Python程式碼格式重點.html'>Previous</a> <a href='Day2(0117).html'>Next</a> >> Day2(0117)<br /><h1>常見程式設計錯誤(bug)</h1>
 <p>1.語法錯誤</p>
 <p>執行後會出現[SyntaxError: unexpected indent][SyntaxError: EOL while scanning string literal]錯誤</p>
 <p>2.執行期間錯誤</p>
@@ -143,7 +143,7 @@ Y=0
 print(X/Y)</pre>
 <p>則是因為分母不能為零而發生[ZeroDivisionError: division by zero]錯誤</p>
 <p>3.邏輯錯誤</p>
-<br />Python程式碼格式重點 << <a href='Python程式碼格式重點.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
+<br />Python程式碼格式重點 << <a href='Python程式碼格式重點.html'>Previous</a> <a href='Day2(0117).html'>Next</a> >> Day2(0117)</div>
         
     <!-- footer -->
       <div class="container">
