--- a/content/資料參考.html
+++ b/content/資料參考.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
+                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">常見程式設計錯誤(bug) << <a href='常見程式設計錯誤(bug).html'>Previous</a> <br /><h1>資料參考</h1>
-<p>https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web </p><br />常見程式設計錯誤(bug) << <a href='常見程式設計錯誤(bug).html'>Previous</a> </div>
+    <div id="tipue_search_content">型別 << <a href='型別.html'>Previous</a> <br /><h1>資料參考</h1>
+<p>https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web </p><br />型別 << <a href='型別.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
