Day3(0118) progress update

--- a/content/Day3(0118).html
+++ b/content/Day3(0118).html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">變數 << <a href='變數.html'>Previous</a> <br /><h1>資料參考</h1>
-<p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p><br />變數 << <a href='變數.html'>Previous</a> </div>
+    <div id="tipue_search_content">型別 << <a href='型別.html'>Previous</a> <a href='變數.html'>Next</a> >> 變數<br /><h1>Day3(0118)</h1>
+<br />型別 << <a href='型別.html'>Previous</a> <a href='變數.html'>Next</a> >> 變數</div>
         
     <!-- footer -->
       <div class="container">
