--- a/config/content.htm
+++ b/config/content.htm
@@ -60,17 +60,32 @@ Hello World!!!
 Hello World!!!
 Hello World!!!</pre>
 <p></p>
-<p>3二元序列型別:bytes、bytearray、memoryview。</p>
-<p>4序列型別:list、tuple、range。</p>
+<p>3.二元序列型別:bytes、bytearray、memoryview。</p>
+<p>4.序列型別:list、tuple、range。</p>
 <p>    (1)list型別:用來表示串列，由一連串的資料所組成的，有順序且可改變內容(mutable)的序列(sequence)，list內的資料以逗號隔開，串列前後以中括號標示。</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">[1,3,5,6]</pre>
 <p>    (2)tuple型別:<span>用來表示序對，由一連串的資料所組成的，有順序且不可改變內容(immutable)的序列(sequence</span><span>)，tuple內的資料以逗號隔開，序列前後以小括號標示。</span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">(1,3,5,6)</pre>
-<p>5集合型別:set、frozenset。</p>
+<p>5.集合型別:set、frozenset。</p>
 <p>    (1)<span>set型別:用來表示集合，包含沒有順序、沒有重複且內容可變得多個資料，前後已大括號表示，資料以逗號隔開。</span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">{"a",3,"b",2}</pre>
-<p>6對映型別:dict。</p>
+<p>6.對映型別:dict。</p>
 <p>    (1)<span>dict型別:用來表示字典，包含沒有順序、沒有重複且內容可變得多個資料，前後已大括號表示，資料以逗號隔開。使用鍵(key)作為索引來存取字典中的數值(value)。</span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">{"ID":"123456","name":"simon"}</pre>
+<h2>Day3(0118)</h2>
+<h3>變數</h3>
+<p>1.命名規則:</p>
+<p>    (1)第一個字元可以是英文字母、底線(_)、或中文，因考慮到國際接軌，建議儘量不要使用中文來命名。</p>
+<p>    (2)不能使用關鍵字及內建常數、函式、類別的名稱命名。</p>
+<p>    (3)因不能使用空白格，所以建議每換一個單字都以大寫開頭，例如userName。</p>
+<p>    (4)可以合理的簡寫來命名。</p>
+<p>    (5)命名不能使用特殊符號，除了底線(_)。</p>
+<p>2.指派方式:使用指派運算子(=)(assignment operator)</p>
+<p>    (1)例一:定義為str型別</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">myName = "Simon"</pre>
+<p>    (2)例二:定義為int型別</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">myPhoneNumber = 1234567890</pre>
+<p>    (3)例三:同時指派多個變數</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">X,Y,Z=1,2,"apple"</pre>
 <h1>資料參考</h1>
-<p>https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web </p>
+<p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
