--- a/content/型別.html
+++ b/content/型別.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
+                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day2(0117) << <a href='Day2(0117).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>型別</h1>
+    <div id="tipue_search_content">Day2(0117) << <a href='Day2(0117).html'>Previous</a> <a href='Day3(0118).html'>Next</a> >> Day3(0118)<br /><h1>型別</h1>
 <p>1.數值型別:int、float、complex、bool。</p>
 <p>    (1)int型別:用來表示整數(integer)，正負整數皆包含在內。</p>
 <p><span>    (2)float型別:用來表示浮點數(float point number)，有小數部分，精確度取決於作業系統平台。</span></p>
@@ -164,19 +164,19 @@ Hello World!!!
 Hello World!!!
 Hello World!!!</pre>
 <p></p>
-<p>3二元序列型別:bytes、bytearray、memoryview。</p>
-<p>4序列型別:list、tuple、range。</p>
+<p>3.二元序列型別:bytes、bytearray、memoryview。</p>
+<p>4.序列型別:list、tuple、range。</p>
 <p>    (1)list型別:用來表示串列，由一連串的資料所組成的，有順序且可改變內容(mutable)的序列(sequence)，list內的資料以逗號隔開，串列前後以中括號標示。</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">[1,3,5,6]</pre>
 <p>    (2)tuple型別:<span>用來表示序對，由一連串的資料所組成的，有順序且不可改變內容(immutable)的序列(sequence</span><span>)，tuple內的資料以逗號隔開，序列前後以小括號標示。</span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">(1,3,5,6)</pre>
-<p>5集合型別:set、frozenset。</p>
+<p>5.集合型別:set、frozenset。</p>
 <p>    (1)<span>set型別:用來表示集合，包含沒有順序、沒有重複且內容可變得多個資料，前後已大括號表示，資料以逗號隔開。</span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">{"a",3,"b",2}</pre>
-<p>6對映型別:dict。</p>
+<p>6.對映型別:dict。</p>
 <p>    (1)<span>dict型別:用來表示字典，包含沒有順序、沒有重複且內容可變得多個資料，前後已大括號表示，資料以逗號隔開。使用鍵(key)作為索引來存取字典中的數值(value)。</span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">{"ID":"123456","name":"simon"}</pre>
-<br />Day2(0117) << <a href='Day2(0117).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
+<br />Day2(0117) << <a href='Day2(0117).html'>Previous</a> <a href='Day3(0118).html'>Next</a> >> Day3(0118)</div>
         
     <!-- footer -->
       <div class="container">
