Day4(0119) progress update

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -87,5 +87,12 @@ Hello World!!!</pre>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">myPhoneNumber = 1234567890</pre>
 <p>    (3)例三:同時指派多個變數</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">X,Y,Z=1,2,"apple"</pre>
+<h2>Day4(0119)</h2>
+<h3>常數</h3>
+<p>常數是一個有意義的名稱，它不會隨城市的執行而改變，同時也無法人為使它改變。例:</p>
+<p>    (1)True:bool型別的真(True)值。</p>
+<p>    (2)False<span>:bool型別的假(False)值。</span></p>
+<p>    (3)None:表示空值，若將變數設為None，則表示此變數沒有值。</p>
+<p>使用常數的優點:</p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
