--- a/content/變數.html
+++ b/content/變數.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
+                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></ul><li class='has-children'><a href='Day4(0119).html'>Day4(0119)</a><ul class='dropdown'><li><a href='常數.html'>常數</a><li><a href='運算子.html'>運算子</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day3(0118) << <a href='Day3(0118).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>變數</h1>
+    <div id="tipue_search_content">Day3(0118) << <a href='Day3(0118).html'>Previous</a> <a href='Day4(0119).html'>Next</a> >> Day4(0119)<br /><h1>變數</h1>
 <p>1.命名規則:</p>
 <p>    (1)第一個字元可以是英文字母、底線(_)、或中文，因考慮到國際接軌，建議儘量不要使用中文來命名。</p>
 <p>    (2)不能使用關鍵字及內建常數、函式、類別的名稱命名。</p>
@@ -147,7 +147,7 @@ img.add_border {
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">myPhoneNumber = 1234567890</pre>
 <p>    (3)例三:同時指派多個變數</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">X,Y,Z=1,2,"apple"</pre>
-<br />Day3(0118) << <a href='Day3(0118).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
+<br />Day3(0118) << <a href='Day3(0118).html'>Previous</a> <a href='Day4(0119).html'>Next</a> >> Day4(0119)</div>
         
     <!-- footer -->
       <div class="container">
