--- a/config/content.htm
+++ b/config/content.htm
@@ -87,5 +87,25 @@ Hello World!!!</pre>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">myPhoneNumber = 1234567890</pre>
 <p>    (3)例三:同時指派多個變數</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">X,Y,Z=1,2,"apple"</pre>
+<h2>Day4(0119)</h2>
+<h3>常數</h3>
+<p>常數是一個有意義的名稱，它不會隨程式的執行而改變，同時也無法人為使它改變。例:</p>
+<p>    (1)True:bool型別的真(True)值。</p>
+<p>    (2)False<span>:bool型別的假(False)值。</span></p>
+<p>    (3)None:表示空值，若將變數設為None，則表示此變數沒有值。</p>
+<p>使用名詞為常數命名的優點:</p>
+<p>    (1)提高程式可讀性。</p>
+<p>    (2)若為常用常數，就不必重複輸入其值。</p>
+<p>    (3)常數定義需變更時，只需修改一個地方即可。</p>
+<h3>運算子</h3>
+<p>1.算術運算子(arithmetic operator):+、-、*、/、//、%、**。</p>
+<p>2.移位<span>運算子(shifting operator):&lt;&lt;、&gt;&gt;。</span></p>
+<p>3.位元<span>運算子(bitwise operator):~、&amp;、|、^。</span></p>
+<p>4.比較<span>運算子(comparison operator):&gt;、&lt;、&gt;=、&lt;=、==、!=。</span></p>
+<p>5.邏輯<span>運算子(logical operator):and、or、not。</span></p>
+<p>6.指派<span>運算子(assignment operator)=、+=、-=、*=、/=、//=、%=、**=、&lt;&lt;=、&gt;&gt;=、&amp;=、|=、^=。</span></p>
+<p>7.其他特殊符號()、[]、{}、,、:、.、;。</p>
+<p>8.單位運算子:+、-和~，此時的+、-是用來表達正負數值，只有單個運算元，採前置記法，例如:-5、+5。</p>
+<p>9.二元運算子:<span>+、-和~以外的運算子屬於二元運算子，有兩個運算元，採中置記法，例如:1.3*62、60/2.6。</span></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
