--- a/config/content.htm
+++ b/config/content.htm
@@ -90,8 +90,8 @@ Hello World!!!</pre>
 <h2>Day4(0119)</h2>
 <h3>常數</h3>
 <p>常數是一個有意義的名稱，它不會隨程式的執行而改變，同時也無法人為使它改變。例:</p>
-<p>    (1)True:bool型別的真(True)值。</p>
-<p>    (2)False<span>:bool型別的假(False)值。</span></p>
+<p>    (1)True:bool型別的真(True)值，作為int型別時值為1。</p>
+<p>    (2)False<span>:bool型別的假(False)值，作為int型別時值為0。</span></p>
 <p>    (3)None:表示空值，若將變數設為None，則表示此變數沒有值。</p>
 <p>使用名詞為常數命名的優點:</p>
 <p>    (1)提高程式可讀性。</p>
@@ -107,5 +107,79 @@ Hello World!!!</pre>
 <p>7.其他特殊符號()、[]、{}、,、:、.、;。</p>
 <p>8.單位運算子:+、-和~，此時的+、-是用來表達正負數值，只有單個運算元，採前置記法，例如:-5、+5。</p>
 <p>9.二元運算子:<span>+、-和~以外的運算子屬於二元運算子，有兩個運算元，採中置記法，例如:1.3*62、60/2.6。</span></p>
+<h2><span>Day5(0120)</span></h2>
+<h3><span>運算子個別解說</span></h3>
+<p><span>1.算數運算子</span></p>
+<p>    (1)+[加法]:表示a加b，語法如下</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">1+2</pre>
+<p>    另外+運算子也能用來連接字串，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">"5"+"apple"</pre>
+<p>    得到以下結果</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">"5apple"</pre>
+<p>    (2)-[減法]:表示a減b，語法如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">2-1</pre>
+<p>    (3)*[乘法]:表示a乘b<span>，</span><span>語法如下。</span></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">2*1</pre>
+<p>    (4)/[浮點數除法]:表示a除以b，結果為float型別，語法如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">12/3</pre>
+<p>    結果為</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">4.0</pre>
+<p>    (5)//[整數除法]:<span>表示a除以b，結果為int型別，小數部分將直接捨去，語法如下。</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">7//3</pre>
+<p>    結果為</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">2</pre>
+<p>    (6)%[餘數]:<span>表示a除以b的餘數，語法如下。</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">12%5</pre>
+<p>    結果為</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">2</pre>
+<p>    (7)**[指數]:表示a的b次方，語法如下。</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">2**2</pre>
+<p>    結果為</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">4</pre>
+<p>2.位元運算子</p>
+<p>    (1)~[位元 NOT]</p>
+<p>    (2)&amp;[位元 AND]</p>
+<p>    (3)|[位元 OR]</p>
+<p>    (4)^[位元 XOR]</p>
+<p>3.比較運算子</p>
+<table height="132" style="width: 542px;">
+<tbody>
+<tr>
+<td style="width: 86px;">運算子</td>
+<td style="width: 86px;">語法</td>
+<td style="width: 348px;">說明</td>
+</tr>
+<tr>
+<td style="width: 86px;">&gt;</td>
+<td style="width: 86px;">a&gt;b</td>
+<td style="width: 348px;">若a大於b時傳回True，反之則傳回False。</td>
+</tr>
+<tr>
+<td style="width: 86px;">&lt;</td>
+<td style="width: 86px;">a&lt;b</td>
+<td style="width: 348px;"><span>若a小於b時傳回True，反之則傳回False。</span></td>
+</tr>
+<tr>
+<td style="width: 86px;">&gt;=</td>
+<td style="width: 86px;">a&gt;=b</td>
+<td style="width: 348px;"><span>若a大於等於b時傳回True，反之則傳回False。</span></td>
+</tr>
+<tr>
+<td style="width: 86px;">&lt;=</td>
+<td style="width: 86px;">a&lt;=b</td>
+<td style="width: 348px;"><span>若a小於等於</span><span>b</span><span>時傳回True，反之則傳回False。</span></td>
+</tr>
+<tr>
+<td style="width: 86px;">==</td>
+<td style="width: 86px;">a==b</td>
+<td style="width: 348px;"><span>若a等於b</span><span>時傳回True，反之則傳回False。</span></td>
+</tr>
+<tr>
+<td style="width: 86px;">!=</td>
+<td style="width: 86px;">a!=b</td>
+<td style="width: 348px;"><span>若a不等於b</span><span>時傳回True，反之則傳回False。</span></td>
+</tr>
+</tbody>
+</table>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
