--- a/content/Day5(0120).html
+++ b/content/Day5(0120).html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='Python源起.html'>Next</a> >> Python源起<br /><h1>Day1(0116)</h1>
-<br />W1 << <a href='W1.html'>Previous</a> <a href='Python源起.html'>Next</a> >> Python源起</div>
+    <div id="tipue_search_content">運算子 << <a href='運算子.html'>Previous</a> <a href='運算子個別解說.html'>Next</a> >> 運算子個別解說<br /><h1>Day5(0120)</h1>
+<br />運算子 << <a href='運算子.html'>Previous</a> <a href='運算子個別解說.html'>Next</a> >> 運算子個別解說</div>
         
     <!-- footer -->
       <div class="container">
