--- a/content/運算子.html
+++ b/content/運算子.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></ul><li class='has-children'><a href='Day4(0119).html'>Day4(0119)</a><ul class='dropdown'><li><a href='常數.html'>常數</a><li><a href='運算子.html'>運算子</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
+                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></ul><li class='has-children'><a href='Day4(0119).html'>Day4(0119)</a><ul class='dropdown'><li><a href='常數.html'>常數</a><li><a href='運算子.html'>運算子</a></li></ul><li class='has-children'><a href='Day5(0120).html'>Day5(0120)</a><ul class='dropdown'><li><a href='運算子個別解說.html'>運算子個別解說</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">常數 << <a href='常數.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>運算子</h1>
+    <div id="tipue_search_content">常數 << <a href='常數.html'>Previous</a> <a href='Day5(0120).html'>Next</a> >> Day5(0120)<br /><h1>運算子</h1>
 <p>1.算術運算子(arithmetic operator):+、-、*、/、//、%、**。</p>
 <p>2.移位<span>運算子(shifting operator):&lt;&lt;、&gt;&gt;。</span></p>
 <p>3.位元<span>運算子(bitwise operator):~、&amp;、|、^。</span></p>
@@ -143,7 +143,7 @@ img.add_border {
 <p>7.其他特殊符號()、[]、{}、,、:、.、;。</p>
 <p>8.單位運算子:+、-和~，此時的+、-是用來表達正負數值，只有單個運算元，採前置記法，例如:-5、+5。</p>
 <p>9.二元運算子:<span>+、-和~以外的運算子屬於二元運算子，有兩個運算元，採中置記法，例如:1.3*62、60/2.6。</span></p>
-<br />常數 << <a href='常數.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
+<br />常數 << <a href='常數.html'>Previous</a> <a href='Day5(0120).html'>Next</a> >> Day5(0120)</div>
         
     <!-- footer -->
       <div class="container">
