--- a/content/運算子個別解說.html
+++ b/content/運算子個別解說.html
@@ -133,8 +133,80 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='Python源起.html'>Next</a> >> Python源起<br /><h1>Day1(0116)</h1>
-<br />W1 << <a href='W1.html'>Previous</a> <a href='Python源起.html'>Next</a> >> Python源起</div>
+    <div id="tipue_search_content">Day5(0120) << <a href='Day5(0120).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>運算子個別解說</h1>
+<p><span>1.算數運算子</span></p>
+<p>    (1)+[加法]:表示a加b，語法如下</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">1+2</pre>
+<p>    另外+運算子也能用來連接字串，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">"5"+"apple"</pre>
+<p>    得到以下結果</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">"5apple"</pre>
+<p>    (2)-[減法]:表示a減b，語法如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">2-1</pre>
+<p>    (3)*[乘法]:表示a乘b<span>，</span><span>語法如下。</span></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">2*1</pre>
+<p>    (4)/[浮點數除法]:表示a除以b，結果為float型別，語法如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">12/3</pre>
+<p>    結果為</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">4.0</pre>
+<p>    (5)//[整數除法]:<span>表示a除以b，結果為int型別，小數部分將直接捨去，語法如下。</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">7//3</pre>
+<p>    結果為</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">2</pre>
+<p>    (6)%[餘數]:<span>表示a除以b的餘數，語法如下。</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">12%5</pre>
+<p>    結果為</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">2</pre>
+<p>    (7)**[指數]:表示a的b次方，語法如下。</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">2**2</pre>
+<p>    結果為</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">4</pre>
+<p>2.位元運算子</p>
+<p>    (1)~[位元 NOT]</p>
+<p>    (2)&amp;[位元 AND]</p>
+<p>    (3)|[位元 OR]</p>
+<p>    (4)^[位元 XOR]</p>
+<p>3.比較運算子</p>
+<table height="132" style="width: 542px;">
+<tbody>
+<tr>
+<td style="width: 86px;">運算子</td>
+<td style="width: 86px;">語法</td>
+<td style="width: 348px;">說明</td>
+</tr>
+<tr>
+<td style="width: 86px;">&gt;</td>
+<td style="width: 86px;">a&gt;b</td>
+<td style="width: 348px;">若a大於b時傳回True，反之則傳回False。</td>
+</tr>
+<tr>
+<td style="width: 86px;">&lt;</td>
+<td style="width: 86px;">a&lt;b</td>
+<td style="width: 348px;"><span>若a小於b時傳回True，反之則傳回False。</span></td>
+</tr>
+<tr>
+<td style="width: 86px;">&gt;=</td>
+<td style="width: 86px;">a&gt;=b</td>
+<td style="width: 348px;"><span>若a大於等於b時傳回True，反之則傳回False。</span></td>
+</tr>
+<tr>
+<td style="width: 86px;">&lt;=</td>
+<td style="width: 86px;">a&lt;=b</td>
+<td style="width: 348px;"><span>若a小於等於</span><span>b</span><span>時傳回True，反之則傳回False。</span></td>
+</tr>
+<tr>
+<td style="width: 86px;">==</td>
+<td style="width: 86px;">a==b</td>
+<td style="width: 348px;"><span>若a等於b</span><span>時傳回True，反之則傳回False。</span></td>
+</tr>
+<tr>
+<td style="width: 86px;">!=</td>
+<td style="width: 86px;">a!=b</td>
+<td style="width: 348px;"><span>若a不等於b</span><span>時傳回True，反之則傳回False。</span></td>
+</tr>
+</tbody>
+</table>
+<br />Day5(0120) << <a href='Day5(0120).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
         
     <!-- footer -->
       <div class="container">
