Day6(0121) progress update

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -145,41 +145,119 @@ Hello World!!!</pre>
 <table height="132" style="width: 542px;">
 <tbody>
 <tr>
-<td style="width: 49px;">運算子</td>
-<td style="width: 91px;">語法</td>
-<td style="width: 380px;">說明</td>
+<td style="width: 86px;">運算子</td>
+<td style="width: 86px;">語法</td>
+<td style="width: 348px;">說明</td>
 </tr>
 <tr>
-<td style="width: 49px;">&gt;</td>
-<td style="width: 91px;">a&gt;b</td>
-<td style="width: 380px;">若a大於b時傳回True，反之則傳回False。</td>
+<td style="width: 86px;">&gt;</td>
+<td style="width: 86px;">a&gt;b</td>
+<td style="width: 348px;">若a大於b時傳回True，反之則傳回False。</td>
 </tr>
 <tr>
-<td style="width: 49px;">&lt;</td>
-<td style="width: 91px;">a&lt;b</td>
-<td style="width: 380px;"><span>若a小於b時傳回True，反之則傳回False。</span></td>
+<td style="width: 86px;">&lt;</td>
+<td style="width: 86px;">a&lt;b</td>
+<td style="width: 348px;"><span>若a小於b時傳回True，反之則傳回False。</span></td>
 </tr>
 <tr>
-<td style="width: 49px;">&gt;=</td>
-<td style="width: 91px;">a&gt;=b</td>
-<td style="width: 380px;"><span>若a大於等於b時傳回True，反之則傳回False。</span></td>
+<td style="width: 86px;">&gt;=</td>
+<td style="width: 86px;">a&gt;=b</td>
+<td style="width: 348px;"><span>若a大於等於b時傳回True，反之則傳回False。</span></td>
 </tr>
 <tr>
-<td style="width: 49px;">&lt;=</td>
-<td style="width: 91px;">a&lt;=b</td>
-<td style="width: 380px;"><span>若a小於等於</span><span>b</span><span>時傳回True，反之則傳回False。</span></td>
+<td style="width: 86px;">&lt;=</td>
+<td style="width: 86px;">a&lt;=b</td>
+<td style="width: 348px;"><span>若a小於等於</span><span>b</span><span>時傳回True，反之則傳回False。</span></td>
 </tr>
 <tr>
-<td style="width: 49px;">==</td>
-<td style="width: 91px;">a==b</td>
-<td style="width: 380px;"><span>若a等於b</span><span>時傳回True，反之則傳回False。</span></td>
+<td style="width: 86px;">==</td>
+<td style="width: 86px;">a==b</td>
+<td style="width: 348px;"><span>若a等於b</span><span>時傳回True，反之則傳回False。</span></td>
 </tr>
 <tr>
-<td style="width: 49px;">!=</td>
-<td style="width: 91px;">a!=b</td>
-<td style="width: 380px;"><span>若a不等於b</span><span>時傳回True，反之則傳回False。</span></td>
+<td style="width: 86px;">!=</td>
+<td style="width: 86px;">a!=b</td>
+<td style="width: 348px;"><span>若a不等於b</span><span>時傳回True，反之則傳回False。</span></td>
 </tr>
 </tbody>
 </table>
+<h2>Day6(0121)</h2>
+<h3><span>運算子個別解說</span></h3>
+<p><span>3.指派運算子</span></p>
+<table style="width: 538px;">
+<tbody>
+<tr style="height: 16px;">
+<td style="width: 85px; height: 16px;">運算子</td>
+<td style="width: 84px; height: 16px;">語法</td>
+<td style="width: 347px; height: 16px;">說明</td>
+</tr>
+<tr style="height: 15.0625px;">
+<td style="width: 85px; height: 15.0625px;">=</td>
+<td style="width: 84px; height: 15.0625px;">a=b</td>
+<td style="width: 347px; height: 15.0625px;">將b指派給a</td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">+=</td>
+<td style="width: 84px; height: 15px;">a+=b</td>
+<td style="width: 347px; height: 15px;"></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">-=</td>
+<td style="width: 84px; height: 15px;">a-=b</td>
+<td style="width: 347px; height: 15px;"></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">*=</td>
+<td style="width: 84px; height: 15px;">a*=b</td>
+<td style="width: 347px; height: 15px;"></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">/=</td>
+<td style="width: 84px; height: 15px;">a/=b</td>
+<td style="width: 347px; height: 15px;"></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">//=</td>
+<td style="width: 84px; height: 15px;">a//=b</td>
+<td style="width: 347px; height: 15px;"></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">%=</td>
+<td style="width: 84px; height: 15px;">a%=b</td>
+<td style="width: 347px; height: 15px;"></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">**=</td>
+<td style="width: 84px; height: 15px;">a**=b</td>
+<td style="width: 347px; height: 15px;"></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">&lt;&lt;=</td>
+<td style="width: 84px; height: 15px;"><span>a&lt;&lt;=b</span></td>
+<td style="width: 347px; height: 15px;"></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">&gt;&gt;=</td>
+<td style="width: 84px; height: 15px;"><span>a&gt;&gt;=b</span></td>
+<td style="width: 347px; height: 15px;"></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">&amp;=</td>
+<td style="width: 84px; height: 15px;"><span>a&amp;=b</span></td>
+<td style="width: 347px; height: 15px;"></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">|=</td>
+<td style="width: 84px; height: 15px;"><span>a|=b</span></td>
+<td style="width: 347px; height: 15px;"></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">^=</td>
+<td style="width: 84px; height: 15px;"><span>a^=b</span></td>
+<td style="width: 347px; height: 15px;"></td>
+</tr>
+</tbody>
+</table>
+<p></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
