--- a/config/content.htm
+++ b/config/content.htm
@@ -108,7 +108,7 @@ Hello World!!!</pre>
 <p>8.單位運算子:+、-和~，此時的+、-是用來表達正負數值，只有單個運算元，採前置記法，例如:-5、+5。</p>
 <p>9.二元運算子:<span>+、-和~以外的運算子屬於二元運算子，有兩個運算元，採中置記法，例如:1.3*62、60/2.6。</span></p>
 <h2><span>Day5(0120)</span></h2>
-<h3><span>運算子個別解說</span></h3>
+<h3><span>運算子個別解說(一)</span></h3>
 <p><span>1.算數運算子</span></p>
 <p>    (1)+[加法]:表示a加b，語法如下</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">1+2</pre>
@@ -181,5 +181,86 @@ Hello World!!!</pre>
 </tr>
 </tbody>
 </table>
+<h2>Day6(0121)</h2>
+<h3><span>運算子個別解說(二)</span></h3>
+<p><span>4.指派運算子</span></p>
+<table style="width: 538px;">
+<tbody>
+<tr style="height: 16px;">
+<td style="width: 85px; height: 16px;">運算子</td>
+<td style="width: 84px; height: 16px;">語法</td>
+<td style="width: 347px; height: 16px;">說明</td>
+</tr>
+<tr style="height: 14.0625px;">
+<td style="width: 85px; height: 14.0625px;">=</td>
+<td style="width: 84px; height: 14.0625px;">a=b</td>
+<td style="width: 347px; height: 14.0625px;">將b指派給a，將a的值設定為b的值。</td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">+=</td>
+<td style="width: 84px; height: 15px;">a+=b</td>
+<td style="width: 347px; height: 15px;">相當於a=a+b。</td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">-=</td>
+<td style="width: 84px; height: 15px;">a-=b</td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a-b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">*=</td>
+<td style="width: 84px; height: 15px;">a*=b</td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a*b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">/=</td>
+<td style="width: 84px; height: 15px;">a/=b</td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a/b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">//=</td>
+<td style="width: 84px; height: 15px;">a//=b</td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a//b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">%=</td>
+<td style="width: 84px; height: 15px;">a%=b</td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a%b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">**=</td>
+<td style="width: 84px; height: 15px;">a**=b</td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a**b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">&lt;&lt;=</td>
+<td style="width: 84px; height: 15px;"><span>a&lt;&lt;=b</span></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a&lt;&lt;b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">&gt;&gt;=</td>
+<td style="width: 84px; height: 15px;"><span>a&gt;&gt;=b</span></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a&gt;&gt;b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">&amp;=</td>
+<td style="width: 84px; height: 15px;"><span>a&amp;=b</span></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a&amp;b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">|=</td>
+<td style="width: 84px; height: 15px;"><span>a|=b</span></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a|b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">^=</td>
+<td style="width: 84px; height: 15px;"><span>a^=b</span></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a^b。</span></td>
+</tr>
+</tbody>
+</table>
+<p>5.邏輯運算子</p>
+<p>    (1)and:若a and b，<span>表示</span>a與b皆為True則傳回True，反之傳回False。</p>
+<p>    (2)or:<span>若a or b，表示a與b皆為False則傳回False，反之傳回True。</span></p>
+<p><span>    (3)not:若not a，表示將a進行邏輯否定，若a的值為True，傳回False，反之傳回True。</span></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
