--- a/content/運算子個別解說(二).html
+++ b/content/運算子個別解說(二).html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></ul><li class='has-children'><a href='Day4(0119).html'>Day4(0119)</a><ul class='dropdown'><li><a href='常數.html'>常數</a><li><a href='運算子.html'>運算子</a></li></ul><li class='has-children'><a href='Day5(0120).html'>Day5(0120)</a><ul class='dropdown'><li><a href='運算子個別解說.html'>運算子個別解說</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
+                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></ul><li class='has-children'><a href='Day4(0119).html'>Day4(0119)</a><ul class='dropdown'><li><a href='常數.html'>常數</a><li><a href='運算子.html'>運算子</a></li></ul><li class='has-children'><a href='Day5(0120).html'>Day5(0120)</a><ul class='dropdown'><li><a href='運算子個別解說(一).html'>運算子個別解說(一)</a></li></ul><li class='has-children'><a href='Day6(0121).html'>Day6(0121)</a><ul class='dropdown'><li><a href='運算子個別解說(二).html'>運算子個別解說(二)</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,80 +133,87 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day5(0120) << <a href='Day5(0120).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>運算子個別解說</h1>
-<p><span>1.算數運算子</span></p>
-<p>    (1)+[加法]:表示a加b，語法如下</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">1+2</pre>
-<p>    另外+運算子也能用來連接字串，如下。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">"5"+"apple"</pre>
-<p>    得到以下結果</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">"5apple"</pre>
-<p>    (2)-[減法]:表示a減b，語法如下。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">2-1</pre>
-<p>    (3)*[乘法]:表示a乘b<span>，</span><span>語法如下。</span></p>
-<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">2*1</pre>
-<p>    (4)/[浮點數除法]:表示a除以b，結果為float型別，語法如下。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">12/3</pre>
-<p>    結果為</p>
-<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">4.0</pre>
-<p>    (5)//[整數除法]:<span>表示a除以b，結果為int型別，小數部分將直接捨去，語法如下。</span></p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">7//3</pre>
-<p>    結果為</p>
-<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">2</pre>
-<p>    (6)%[餘數]:<span>表示a除以b的餘數，語法如下。</span></p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">12%5</pre>
-<p>    結果為</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">2</pre>
-<p>    (7)**[指數]:表示a的b次方，語法如下。</p>
-<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">2**2</pre>
-<p>    結果為</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">4</pre>
-<p>2.位元運算子</p>
-<p>    (1)~[位元 NOT]</p>
-<p>    (2)&amp;[位元 AND]</p>
-<p>    (3)|[位元 OR]</p>
-<p>    (4)^[位元 XOR]</p>
-<p>3.比較運算子</p>
-<table height="132" style="width: 542px;">
+    <div id="tipue_search_content">Day6(0121) << <a href='Day6(0121).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>運算子個別解說(二)</h1>
+<p><span>4.指派運算子</span></p>
+<table style="width: 538px;">
 <tbody>
-<tr>
-<td style="width: 86px;">運算子</td>
-<td style="width: 86px;">語法</td>
-<td style="width: 348px;">說明</td>
+<tr style="height: 16px;">
+<td style="width: 85px; height: 16px;">運算子</td>
+<td style="width: 84px; height: 16px;">語法</td>
+<td style="width: 347px; height: 16px;">說明</td>
 </tr>
-<tr>
-<td style="width: 86px;">&gt;</td>
-<td style="width: 86px;">a&gt;b</td>
-<td style="width: 348px;">若a大於b時傳回True，反之則傳回False。</td>
+<tr style="height: 14.0625px;">
+<td style="width: 85px; height: 14.0625px;">=</td>
+<td style="width: 84px; height: 14.0625px;">a=b</td>
+<td style="width: 347px; height: 14.0625px;">將b指派給a，將a的值設定為b的值。</td>
 </tr>
-<tr>
-<td style="width: 86px;">&lt;</td>
-<td style="width: 86px;">a&lt;b</td>
-<td style="width: 348px;"><span>若a小於b時傳回True，反之則傳回False。</span></td>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">+=</td>
+<td style="width: 84px; height: 15px;">a+=b</td>
+<td style="width: 347px; height: 15px;">相當於a=a+b。</td>
 </tr>
-<tr>
-<td style="width: 86px;">&gt;=</td>
-<td style="width: 86px;">a&gt;=b</td>
-<td style="width: 348px;"><span>若a大於等於b時傳回True，反之則傳回False。</span></td>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">-=</td>
+<td style="width: 84px; height: 15px;">a-=b</td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a-b。</span></td>
 </tr>
-<tr>
-<td style="width: 86px;">&lt;=</td>
-<td style="width: 86px;">a&lt;=b</td>
-<td style="width: 348px;"><span>若a小於等於</span><span>b</span><span>時傳回True，反之則傳回False。</span></td>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">*=</td>
+<td style="width: 84px; height: 15px;">a*=b</td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a*b。</span></td>
 </tr>
-<tr>
-<td style="width: 86px;">==</td>
-<td style="width: 86px;">a==b</td>
-<td style="width: 348px;"><span>若a等於b</span><span>時傳回True，反之則傳回False。</span></td>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">/=</td>
+<td style="width: 84px; height: 15px;">a/=b</td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a/b。</span></td>
 </tr>
-<tr>
-<td style="width: 86px;">!=</td>
-<td style="width: 86px;">a!=b</td>
-<td style="width: 348px;"><span>若a不等於b</span><span>時傳回True，反之則傳回False。</span></td>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">//=</td>
+<td style="width: 84px; height: 15px;">a//=b</td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a//b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">%=</td>
+<td style="width: 84px; height: 15px;">a%=b</td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a%b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">**=</td>
+<td style="width: 84px; height: 15px;">a**=b</td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a**b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">&lt;&lt;=</td>
+<td style="width: 84px; height: 15px;"><span>a&lt;&lt;=b</span></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a&lt;&lt;b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">&gt;&gt;=</td>
+<td style="width: 84px; height: 15px;"><span>a&gt;&gt;=b</span></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a&gt;&gt;b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">&amp;=</td>
+<td style="width: 84px; height: 15px;"><span>a&amp;=b</span></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a&amp;b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">|=</td>
+<td style="width: 84px; height: 15px;"><span>a|=b</span></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a|b。</span></td>
+</tr>
+<tr style="height: 15px;">
+<td style="width: 85px; height: 15px;">^=</td>
+<td style="width: 84px; height: 15px;"><span>a^=b</span></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a^b。</span></td>
 </tr>
 </tbody>
 </table>
-<br />Day5(0120) << <a href='Day5(0120).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
+<p>5.邏輯運算子</p>
+<p>    (1)and:若a and b，<span>表示</span>a與b皆為True則傳回True，反之傳回False。</p>
+<p>    (2)or:<span>若a or b，表示a與b皆為False則傳回False，反之傳回True。</span></p>
+<p><span>    (3)not:若not a，表示將a進行邏輯否定，若a的值為True，傳回False，反之傳回True。</span></p>
+<br />Day6(0121) << <a href='Day6(0121).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
         
     <!-- footer -->
       <div class="container">
