Day7(0122) progress update

--- a/config/content.htm
+++ b/config/content.htm
@@ -262,5 +262,30 @@ Hello World!!!</pre>
 <p>    (1)and:若a and b，<span>表示</span>a與b皆為True則傳回True，反之傳回False。</p>
 <p>    (2)or:<span>若a or b，表示a與b皆為False則傳回False，反之傳回True。</span></p>
 <p><span>    (3)not:若not a，表示將a進行邏輯否定，若a的值為True，傳回False，反之傳回True。</span></p>
+<h2><span>Day7(0122)</span></h2>
+<h3><span>運算子的優先順序</span></h3>
+<p><span>運算子的優先順序由高到低為:</span></p>
+<p><span>1.()、[]、{}。</span></p>
+<p><span>2.a[i]、a[i:j]、a()、a.b、a.b()。</span></p>
+<p><span>3.a**b。</span></p>
+<p><span>4.+a、-a、~a。</span></p>
+<p><span>5.a*b、a/b、a//b、a%b。</span></p>
+<p><span>6.a+b、a-b。</span></p>
+<p><span>7.a&lt;&lt;b、a&gt;&gt;b。</span></p>
+<p><span>8.a&amp;b。</span></p>
+<p><span>9.a^b。</span></p>
+<p><span>10.a|b。</span></p>
+<p><span>11.&gt;、&lt;、&gt;=、&lt;=、==、!=。</span></p>
+<p><span>12.not a。</span></p>
+<p><span>13.a and b。</span></p>
+<p><span>14.a or b。</span></p>
+<h3><span>輸出</span></h3>
+<p><span>大多數程式在執行完畢後，會將結果輸出到螢幕。可利用Python內建的print()函數來印出指定的字串。</span></p>
+<p>print()函式的語法如下:</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">print(value,...,sep='',end='\n',file=sys.stdout)</pre>
+<p>value:用來設定要印出的值。</p>
+<p>sep:<span>用來設定隔開兩個值的字串，可省略，省略代表使用預設值''(一個空白)</span></p>
+<p><span>end:用來設定印出最後一個值後所要加上的字串，可省略，省略代表使用預設值'\n'(換行)</span></p>
+<p><span>file:用來設定輸出裝置，可省略，省略代表使用預設值sys.stdout(輸出至螢幕)。</span></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
