--- a/content/Day7(0122).html
+++ b/content/Day7(0122).html
@@ -133,16 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day4(0119) << <a href='Day4(0119).html'>Previous</a> <a href='運算子.html'>Next</a> >> 運算子<br /><h1>常數</h1>
-<p>常數是一個有意義的名稱，它不會隨程式的執行而改變，同時也無法人為使它改變。例:</p>
-<p>    (1)True:bool型別的真(True)值，作為int型別時值為1。</p>
-<p>    (2)False<span>:bool型別的假(False)值，作為int型別時值為0。</span></p>
-<p>    (3)None:表示空值，若將變數設為None，則表示此變數沒有值。</p>
-<p>使用名詞為常數命名的優點:</p>
-<p>    (1)提高程式可讀性。</p>
-<p>    (2)若為常用常數，就不必重複輸入其值。</p>
-<p>    (3)常數定義需變更時，只需修改一個地方即可。</p>
-<br />Day4(0119) << <a href='Day4(0119).html'>Previous</a> <a href='運算子.html'>Next</a> >> 運算子</div>
+    <div id="tipue_search_content">運算子個別解說(二) << <a href='運算子個別解說(二).html'>Previous</a> <a href='運算子的優先順序.html'>Next</a> >> 運算子的優先順序<br /><h1>Day7(0122)</h1>
+<br />運算子個別解說(二) << <a href='運算子個別解說(二).html'>Previous</a> <a href='運算子的優先順序.html'>Next</a> >> 運算子的優先順序</div>
         
     <!-- footer -->
       <div class="container">
