--- a/content/運算子的優先順序.html
+++ b/content/運算子的優先順序.html
@@ -133,16 +133,23 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day4(0119) << <a href='Day4(0119).html'>Previous</a> <a href='運算子.html'>Next</a> >> 運算子<br /><h1>常數</h1>
-<p>常數是一個有意義的名稱，它不會隨程式的執行而改變，同時也無法人為使它改變。例:</p>
-<p>    (1)True:bool型別的真(True)值，作為int型別時值為1。</p>
-<p>    (2)False<span>:bool型別的假(False)值，作為int型別時值為0。</span></p>
-<p>    (3)None:表示空值，若將變數設為None，則表示此變數沒有值。</p>
-<p>使用名詞為常數命名的優點:</p>
-<p>    (1)提高程式可讀性。</p>
-<p>    (2)若為常用常數，就不必重複輸入其值。</p>
-<p>    (3)常數定義需變更時，只需修改一個地方即可。</p>
-<br />Day4(0119) << <a href='Day4(0119).html'>Previous</a> <a href='運算子.html'>Next</a> >> 運算子</div>
+    <div id="tipue_search_content">Day7(0122) << <a href='Day7(0122).html'>Previous</a> <a href='輸出.html'>Next</a> >> 輸出<br /><h1>運算子的優先順序</h1>
+<p><span>運算子的優先順序由高到低為:</span></p>
+<p><span>1.()、[]、{}。</span></p>
+<p><span>2.a[i]、a[i:j]、a()、a.b、a.b()。</span></p>
+<p><span>3.a**b。</span></p>
+<p><span>4.+a、-a、~a。</span></p>
+<p><span>5.a*b、a/b、a//b、a%b。</span></p>
+<p><span>6.a+b、a-b。</span></p>
+<p><span>7.a&lt;&lt;b、a&gt;&gt;b。</span></p>
+<p><span>8.a&amp;b。</span></p>
+<p><span>9.a^b。</span></p>
+<p><span>10.a|b。</span></p>
+<p><span>11.&gt;、&lt;、&gt;=、&lt;=、==、!=。</span></p>
+<p><span>12.not a。</span></p>
+<p><span>13.a and b。</span></p>
+<p><span>14.a or b。</span></p>
+<br />Day7(0122) << <a href='Day7(0122).html'>Previous</a> <a href='輸出.html'>Next</a> >> 輸出</div>
         
     <!-- footer -->
       <div class="container">
