--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -108,7 +108,7 @@ Hello World!!!</pre>
 <p>8.單位運算子:+、-和~，此時的+、-是用來表達正負數值，只有單個運算元，採前置記法，例如:-5、+5。</p>
 <p>9.二元運算子:<span>+、-和~以外的運算子屬於二元運算子，有兩個運算元，採中置記法，例如:1.3*62、60/2.6。</span></p>
 <h2><span>Day5(0120)</span></h2>
-<h3><span>運算子個別解說</span></h3>
+<h3><span>運算子個別解說(一)</span></h3>
 <p><span>1.算數運算子</span></p>
 <p>    (1)+[加法]:表示a加b，語法如下</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">1+2</pre>
@@ -182,8 +182,8 @@ Hello World!!!</pre>
 </tbody>
 </table>
 <h2>Day6(0121)</h2>
-<h3><span>運算子個別解說</span></h3>
-<p><span>3.指派運算子</span></p>
+<h3><span>運算子個別解說(二)</span></h3>
+<p><span>4.指派運算子</span></p>
 <table style="width: 538px;">
 <tbody>
 <tr style="height: 16px;">
@@ -191,73 +191,101 @@ Hello World!!!</pre>
 <td style="width: 84px; height: 16px;">語法</td>
 <td style="width: 347px; height: 16px;">說明</td>
 </tr>
-<tr style="height: 15.0625px;">
-<td style="width: 85px; height: 15.0625px;">=</td>
-<td style="width: 84px; height: 15.0625px;">a=b</td>
-<td style="width: 347px; height: 15.0625px;">將b指派給a</td>
+<tr style="height: 14.0625px;">
+<td style="width: 85px; height: 14.0625px;">=</td>
+<td style="width: 84px; height: 14.0625px;">a=b</td>
+<td style="width: 347px; height: 14.0625px;">將b指派給a，將a的值設定為b的值。</td>
 </tr>
 <tr style="height: 15px;">
 <td style="width: 85px; height: 15px;">+=</td>
 <td style="width: 84px; height: 15px;">a+=b</td>
-<td style="width: 347px; height: 15px;"></td>
+<td style="width: 347px; height: 15px;">相當於a=a+b。</td>
 </tr>
 <tr style="height: 15px;">
 <td style="width: 85px; height: 15px;">-=</td>
 <td style="width: 84px; height: 15px;">a-=b</td>
-<td style="width: 347px; height: 15px;"></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a-b。</span></td>
 </tr>
 <tr style="height: 15px;">
 <td style="width: 85px; height: 15px;">*=</td>
 <td style="width: 84px; height: 15px;">a*=b</td>
-<td style="width: 347px; height: 15px;"></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a*b。</span></td>
 </tr>
 <tr style="height: 15px;">
 <td style="width: 85px; height: 15px;">/=</td>
 <td style="width: 84px; height: 15px;">a/=b</td>
-<td style="width: 347px; height: 15px;"></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a/b。</span></td>
 </tr>
 <tr style="height: 15px;">
 <td style="width: 85px; height: 15px;">//=</td>
 <td style="width: 84px; height: 15px;">a//=b</td>
-<td style="width: 347px; height: 15px;"></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a//b。</span></td>
 </tr>
 <tr style="height: 15px;">
 <td style="width: 85px; height: 15px;">%=</td>
 <td style="width: 84px; height: 15px;">a%=b</td>
-<td style="width: 347px; height: 15px;"></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a%b。</span></td>
 </tr>
 <tr style="height: 15px;">
 <td style="width: 85px; height: 15px;">**=</td>
 <td style="width: 84px; height: 15px;">a**=b</td>
-<td style="width: 347px; height: 15px;"></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a**b。</span></td>
 </tr>
 <tr style="height: 15px;">
 <td style="width: 85px; height: 15px;">&lt;&lt;=</td>
 <td style="width: 84px; height: 15px;"><span>a&lt;&lt;=b</span></td>
-<td style="width: 347px; height: 15px;"></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a&lt;&lt;b。</span></td>
 </tr>
 <tr style="height: 15px;">
 <td style="width: 85px; height: 15px;">&gt;&gt;=</td>
 <td style="width: 84px; height: 15px;"><span>a&gt;&gt;=b</span></td>
-<td style="width: 347px; height: 15px;"></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a&gt;&gt;b。</span></td>
 </tr>
 <tr style="height: 15px;">
 <td style="width: 85px; height: 15px;">&amp;=</td>
 <td style="width: 84px; height: 15px;"><span>a&amp;=b</span></td>
-<td style="width: 347px; height: 15px;"></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a&amp;b。</span></td>
 </tr>
 <tr style="height: 15px;">
 <td style="width: 85px; height: 15px;">|=</td>
 <td style="width: 84px; height: 15px;"><span>a|=b</span></td>
-<td style="width: 347px; height: 15px;"></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a|b。</span></td>
 </tr>
 <tr style="height: 15px;">
 <td style="width: 85px; height: 15px;">^=</td>
 <td style="width: 84px; height: 15px;"><span>a^=b</span></td>
-<td style="width: 347px; height: 15px;"></td>
+<td style="width: 347px; height: 15px;"><span>相當於a=a^b。</span></td>
 </tr>
 </tbody>
 </table>
-<p></p>
+<p>5.邏輯運算子</p>
+<p>    (1)and:若a and b，<span>表示</span>a與b皆為True則傳回True，反之傳回False。</p>
+<p>    (2)or:<span>若a or b，表示a與b皆為False則傳回False，反之傳回True。</span></p>
+<p><span>    (3)not:若not a，表示將a進行邏輯否定，若a的值為True，傳回False，反之傳回True。</span></p>
+<h2><span>Day7(0122)</span></h2>
+<h3><span>運算子的優先順序</span></h3>
+<p><span>運算子的優先順序由高到低為:</span></p>
+<p><span>1.()、[]、{}。</span></p>
+<p><span>2.a[i]、a[i:j]、a()、a.b、a.b()。</span></p>
+<p><span>3.a**b。</span></p>
+<p><span>4.+a、-a、~a。</span></p>
+<p><span>5.a*b、a/b、a//b、a%b。</span></p>
+<p><span>6.a+b、a-b。</span></p>
+<p><span>7.a&lt;&lt;b、a&gt;&gt;b。</span></p>
+<p><span>8.a&amp;b。</span></p>
+<p><span>9.a^b。</span></p>
+<p><span>10.a|b。</span></p>
+<p><span>11.&gt;、&lt;、&gt;=、&lt;=、==、!=。</span></p>
+<p><span>12.not a。</span></p>
+<p><span>13.a and b。</span></p>
+<p><span>14.a or b。</span></p>
+<h3><span>輸出</span></h3>
+<p><span>大多數程式在執行完畢後，會將結果輸出到螢幕。可利用Python內建的print()函數來印出指定的字串。</span></p>
+<p>print()函式的語法如下:</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">print(value,...,sep='',end='\n',file=sys.stdout)</pre>
+<p>value:用來設定要印出的值。</p>
+<p>sep:<span>用來設定隔開兩個值的字串，可省略，代表使用預設值''(一個空白)</span></p>
+<p><span>end:</span></p>
+<p><span>file:</span></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
