--- a/content/輸出.html
+++ b/content/輸出.html
@@ -133,16 +133,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day4(0119) << <a href='Day4(0119).html'>Previous</a> <a href='運算子.html'>Next</a> >> 運算子<br /><h1>常數</h1>
-<p>常數是一個有意義的名稱，它不會隨程式的執行而改變，同時也無法人為使它改變。例:</p>
-<p>    (1)True:bool型別的真(True)值，作為int型別時值為1。</p>
-<p>    (2)False<span>:bool型別的假(False)值，作為int型別時值為0。</span></p>
-<p>    (3)None:表示空值，若將變數設為None，則表示此變數沒有值。</p>
-<p>使用名詞為常數命名的優點:</p>
-<p>    (1)提高程式可讀性。</p>
-<p>    (2)若為常用常數，就不必重複輸入其值。</p>
-<p>    (3)常數定義需變更時，只需修改一個地方即可。</p>
-<br />Day4(0119) << <a href='Day4(0119).html'>Previous</a> <a href='運算子.html'>Next</a> >> 運算子</div>
+    <div id="tipue_search_content">運算子的優先順序 << <a href='運算子的優先順序.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>輸出</h1>
+<p><span>大多數程式在執行完畢後，會將結果輸出到螢幕。可利用Python內建的print()函數來印出指定的字串。</span></p>
+<p>print()函式的語法如下:</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">print(value,...,sep='',end='\n',file=sys.stdout)</pre>
+<p>value:用來設定要印出的值。</p>
+<p>sep:<span>用來設定隔開兩個值的字串，可省略，省略代表使用預設值''(一個空白)</span></p>
+<p><span>end:用來設定印出最後一個值後所要加上的字串，可省略，省略代表使用預設值'\n'(換行)</span></p>
+<p><span>file:用來設定輸出裝置，可省略，省略代表使用預設值sys.stdout(輸出至螢幕)。</span></p>
+<br />運算子的優先順序 << <a href='運算子的優先順序.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
         
     <!-- footer -->
       <div class="container">
