--- a/content/運算子個別解說(二).html
+++ b/content/運算子個別解說(二).html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></ul><li class='has-children'><a href='Day4(0119).html'>Day4(0119)</a><ul class='dropdown'><li><a href='常數.html'>常數</a><li><a href='運算子.html'>運算子</a></li></ul><li class='has-children'><a href='Day5(0120).html'>Day5(0120)</a><ul class='dropdown'><li><a href='運算子個別解說(一).html'>運算子個別解說(一)</a></li></ul><li class='has-children'><a href='Day6(0121).html'>Day6(0121)</a><ul class='dropdown'><li><a href='運算子個別解說(二).html'>運算子個別解說(二)</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
+                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></ul><li class='has-children'><a href='Day4(0119).html'>Day4(0119)</a><ul class='dropdown'><li><a href='常數.html'>常數</a><li><a href='運算子.html'>運算子</a></li></ul><li class='has-children'><a href='Day5(0120).html'>Day5(0120)</a><ul class='dropdown'><li><a href='運算子個別解說(一).html'>運算子個別解說(一)</a></li></ul><li class='has-children'><a href='Day6(0121).html'>Day6(0121)</a><ul class='dropdown'><li><a href='運算子個別解說(二).html'>運算子個別解說(二)</a></li></ul><li class='has-children'><a href='Day7(0122).html'>Day7(0122)</a><ul class='dropdown'><li><a href='運算子的優先順序.html'>運算子的優先順序</a><li><a href='輸出.html'>輸出</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day6(0121) << <a href='Day6(0121).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>運算子個別解說(二)</h1>
+    <div id="tipue_search_content">Day6(0121) << <a href='Day6(0121).html'>Previous</a> <a href='Day7(0122).html'>Next</a> >> Day7(0122)<br /><h1>運算子個別解說(二)</h1>
 <p><span>4.指派運算子</span></p>
 <table style="width: 538px;">
 <tbody>
@@ -213,7 +213,7 @@ img.add_border {
 <p>    (1)and:若a and b，<span>表示</span>a與b皆為True則傳回True，反之傳回False。</p>
 <p>    (2)or:<span>若a or b，表示a與b皆為False則傳回False，反之傳回True。</span></p>
 <p><span>    (3)not:若not a，表示將a進行邏輯否定，若a的值為True，傳回False，反之傳回True。</span></p>
-<br />Day6(0121) << <a href='Day6(0121).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
+<br />Day6(0121) << <a href='Day6(0121).html'>Previous</a> <a href='Day7(0122).html'>Next</a> >> Day7(0122)</div>
         
     <!-- footer -->
       <div class="container">
