--- a/content/輸出.html
+++ b/content/輸出.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></ul><li class='has-children'><a href='Day4(0119).html'>Day4(0119)</a><ul class='dropdown'><li><a href='常數.html'>常數</a><li><a href='運算子.html'>運算子</a></li></ul><li class='has-children'><a href='Day5(0120).html'>Day5(0120)</a><ul class='dropdown'><li><a href='運算子個別解說(一).html'>運算子個別解說(一)</a></li></ul><li class='has-children'><a href='Day6(0121).html'>Day6(0121)</a><ul class='dropdown'><li><a href='運算子個別解說(二).html'>運算子個別解說(二)</a></li></ul><li class='has-children'><a href='Day7(0122).html'>Day7(0122)</a><ul class='dropdown'><li><a href='運算子的優先順序.html'>運算子的優先順序</a><li><a href='輸出.html'>輸出</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
+                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></ul><li class='has-children'><a href='Day4(0119).html'>Day4(0119)</a><ul class='dropdown'><li><a href='常數.html'>常數</a><li><a href='運算子.html'>運算子</a></li></ul><li class='has-children'><a href='Day5(0120).html'>Day5(0120)</a><ul class='dropdown'><li><a href='運算子個別解說(一).html'>運算子個別解說(一)</a></li></ul><li class='has-children'><a href='Day6(0121).html'>Day6(0121)</a><ul class='dropdown'><li><a href='運算子個別解說(二).html'>運算子個別解說(二)</a></li></ul><li class='has-children'><a href='Day7(0122).html'>Day7(0122)</a><ul class='dropdown'><li><a href='運算子的優先順序.html'>運算子的優先順序</a><li><a href='輸出.html'>輸出</a></li></li></ul></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='Day8(0123).html'>Day8(0123)</a><ul class='dropdown'><li><a href='輸入.html'>輸入</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">運算子的優先順序 << <a href='運算子的優先順序.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>輸出</h1>
+    <div id="tipue_search_content">運算子的優先順序 << <a href='運算子的優先順序.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>輸出</h1>
 <p><span>大多數程式在執行完畢後，會將結果輸出到螢幕。可利用Python內建的print()函數來印出指定的字串。</span></p>
 <p>print()函式的語法如下:</p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">print(value,...,sep='',end='\n',file=sys.stdout)</pre>
@@ -141,7 +141,7 @@ img.add_border {
 <p>sep:<span>用來設定隔開兩個值的字串，可省略，省略代表使用預設值''(一個空白)</span></p>
 <p><span>end:用來設定印出最後一個值後所要加上的字串，可省略，省略代表使用預設值'\n'(換行)</span></p>
 <p><span>file:用來設定輸出裝置，可省略，省略代表使用預設值sys.stdout(輸出至螢幕)。</span></p>
-<br />運算子的優先順序 << <a href='運算子的優先順序.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
+<br />運算子的優先順序 << <a href='運算子的優先順序.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
         
     <!-- footer -->
       <div class="container">
