--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -284,8 +284,22 @@ Hello World!!!</pre>
 <p>print()函式的語法如下:</p>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">print(value,...,sep='',end='\n',file=sys.stdout)</pre>
 <p>value:用來設定要印出的值。</p>
-<p>sep:<span>用來設定隔開兩個值的字串，可省略，代表使用預設值''(一個空白)</span></p>
-<p><span>end:</span></p>
-<p><span>file:</span></p>
+<p>sep:<span>用來設定隔開兩個值的字串，可省略，省略代表使用預設值''(一個空白)</span></p>
+<p><span>end:用來設定印出最後一個值後所要加上的字串，可省略，省略代表使用預設值'\n'(換行)</span></p>
+<p><span>file:用來設定輸出裝置，可省略，省略代表使用預設值sys.stdout(輸出至螢幕)。</span></p>
+<h1><span>W2</span></h1>
+<h2><span>Day8(0123)</span></h2>
+<h3><span>輸入</span></h3>
+<p><span>使用內建的input()函式取得輸入的資料</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;userNumber = input("請輸入學號:")
+請輸入學號: 40823131
+##上列按下enter後將會跳回
+&gt;&gt;&gt;</pre>
+<p><span>之後檢驗</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;userNumber
+##按下enter後則出現
+'40823131'
+&gt;&gt;&gt;</pre>
+<p><span></span>得到上列字串後，若需進行計算則需使用內建的eval()將字串轉換為數值。</p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
