--- a/content/Day8(0123).html
+++ b/content/Day8(0123).html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">運算子個別解說(二) << <a href='運算子個別解說(二).html'>Previous</a> <a href='運算子的優先順序.html'>Next</a> >> 運算子的優先順序<br /><h1>Day7(0122)</h1>
-<br />運算子個別解說(二) << <a href='運算子個別解說(二).html'>Previous</a> <a href='運算子的優先順序.html'>Next</a> >> 運算子的優先順序</div>
+    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='輸入.html'>Next</a> >> 輸入<br /><h1>Day8(0123)</h1>
+<br />W2 << <a href='W2.html'>Previous</a> <a href='輸入.html'>Next</a> >> 輸入</div>
         
     <!-- footer -->
       <div class="container">
