--- a/content/W2.html
+++ b/content/W2.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">運算子個別解說(二) << <a href='運算子個別解說(二).html'>Previous</a> <a href='運算子的優先順序.html'>Next</a> >> 運算子的優先順序<br /><h1>Day7(0122)</h1>
-<br />運算子個別解說(二) << <a href='運算子個別解說(二).html'>Previous</a> <a href='運算子的優先順序.html'>Next</a> >> 運算子的優先順序</div>
+    <div id="tipue_search_content">輸出 << <a href='輸出.html'>Previous</a> <a href='Day8(0123).html'>Next</a> >> Day8(0123)<br /><h1>W2</h1>
+<br />輸出 << <a href='輸出.html'>Previous</a> <a href='Day8(0123).html'>Next</a> >> Day8(0123)</div>
         
     <!-- footer -->
       <div class="container">
